cube-database.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres_db
  namespace: application
spec:
  selector:
    matchLabels:
      app: postgres_db
  serviceName: "postgres_db"
  replicas: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: postgres_db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: postgres_db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres_db
          mountPath: /var/lib/postgresql/data
          # subPath: data
  volumeClaimTemplates:
  - metadata:
      name: postgres_db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "rook-ceph-block"
      resources:
        requests:
          storage: 2Gi
